--- a/templates/index.html
+++ b/templates/index.html
@@ -59,10 +59,10 @@
       <br>
       <br>
       <h6 style="text-align: center;">English:</h6>
-      <div id="response-en"></div>
+      <div id="response-en">{{en_transcript}}</div>
       <br>
       <h6 style="text-align: center;">Hindi:</h6>
-      <div id="response-hi"></div>
+      <div id="response-hi">{{hi_transcript}}</div>
     </div>
   </div>
   <!-- Compiled and minified JavaScript -->
@@ -70,3 +70,4 @@
 </body>
 
 </html>
+
